docs/v0.5.9.4/_sources/code.rst.txt
.. _source_code:

Source Code
===========

Welcome to the PyFiberModes Source Code Documentation. This section provides a comprehensive overview of the key classes, functions, and utilities available within the `PyFiberModes` library. Each component is documented in detail, with information on its members, inherited properties, and direct links to the source code.

Class Documentation
===================

Below, you will find detailed, automatically generated documentation for significant classes and functions in the `PyFiberModes` library. These descriptions are intended to help you understand how each class and function fits into the overall framework, and how to utilize them effectively in your projects.



Fiber
-----
 .. automodule:: PyFiberModes.fiber
    :members:
    :member-order: bysource
    :show-inheritance:
    :undoc-members:


Field
-----
 .. automodule:: PyFiberModes.field
    :members:
    :member-order: bysource
    :show-inheritance:
    :undoc-members:

Step-index
----------
 .. automodule:: PyFiberModes.stepindex
    :members:
    :member-order: bysource
    :show-inheritance:
    :undoc-members:


Fiber factory
-------------
 .. automodule:: PyFiberModes.factory
    :members:
    :member-order: bysource
    :show-inheritance:
    :undoc-members:

Solver single clad fiber
------------------------
 .. automodule:: PyFiberModes.solver.ssif
    :members:
    :member-order: bysource
    :show-inheritance:
    :undoc-members:
























