docs/v0.11.0/_sources/code.rst.txt
.. _source_code:

Source Code
===========

Welcome to the PyFiberModes Source Code Documentation. This section provides a comprehensive overview of the key classes, functions, and utilities available within the `PyFiberModes` library. Each component is documented in detail, with information on its members, inherited properties, and direct links to the source code.

Class Documentation
===================

Below, you will find detailed, automatically generated documentation for significant classes and functions in the `PyFiberModes` library. These descriptions are intended to help you understand how each class and function fits into the overall framework, and how to utilize them effectively in your projects.



Fiber
-----
.. automodule:: PyFiberModes.fiber
   :members:
   :inherited-members:
   :member-order: bysource


Field
-----
 .. autoclass:: PyFiberModes.field.Field
   :members:
   :member-order: bysource
   :show-inheritance:
   :undoc-members:



Step-index
----------
 .. autoclass:: PyFiberModes.stepindex.StepIndex
   :members:
   :member-order: bysource
   :show-inheritance:
   :undoc-members:


Fiber factory
-------------
 .. autoclass:: PyFiberModes.factory.FiberFactory
   :members:
   :member-order: bysource
   :show-inheritance:


.. Solver single clad fiber
.. ------------------------
..  .. automodule:: PyFiberModes.solver.ssif
..     :members:
..     :member-order: bysource
..     :show-inheritance:
